# CatGPT

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  docker-compose.yml  flake.nix  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh  supervisord.conf
docs/: API.md  ARCHITECTURE.md  MODEL_SWITCHING.md  SETUP.md  TESTING.md
scripts/: README.md  first_login.py  test_codex_cli.py  test_image_generation.py  test_images.py  test_input_methods.py  test_langchain_tools.py  test_multi_turn.py  test_phase1.py  test_read_aloud.py  test_responses_api.py  test_robust.py
scripts/manual/: README.md  inspect_model_picker.py  sticky_conversation_smoke.py  thread_deletion_smoke.py
src/: config.py  selectors.py
src/api/: conversation_store.py  openai_routes.py  openai_schemas.py  routes.py  schemas.py  server.py
src/browser/: manager.py
src/chatgpt/: client.py  detector.py  image_handler.py  model_registry.py
src/claude/: client.py  detector.py
src/cli/: app.py
tests/: test_app_thread_deletion.py  test_chatgpt_client_model_switch.py  test_chatgpt_project.py  test_conversation_store.py  test_detector_helpers.py  test_image_generation_routes.py  test_model_registry.py  test_openai_routes_helpers.py  test_server_middleware.py
