[project]
name = "catgpt-gateway"
version = "0.1.0"
description = "Expose a logged-in ChatGPT browser session through OpenAI-compatible APIs."
readme = "README.md"
requires-python = ">=3.11,<3.15"
license = { file = "LICENSE" }
dependencies = [
    "fastapi>=0.139.0",
    "openai>=2.44.0",
    "patchright>=1.61.1",
    "pillow>=12.3.0",
    "playwright-stealth>=2.0.3",
    "pydantic>=2.13.4",
    "pymupdf>=1.28.0",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "textual>=8.2.8",
    "typer>=0.26.8",
    "uvicorn>=0.49.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "langchain>=1.3.11",
    "langchain-openai>=1.3.3",
    "requests>=2.32.0",
]

[tool.uv]
package = false
